# THAMES

./: .gitignore  .gitmodules  CHANGES.md  CLAUDE.md  CLAUDE.md.backup-2025-12-29  CMakeLists.txt  INSTALL.md  LICENSE  LICENSE.md  MATERIALS_UI_PHASE1.md  MATERIALS_UI_PHASE1_TEST_REPORT.md  MIGRATION_SUMMARY.md  README.md  SESSION_3_COMPLETE.md  SESSION_SUMMARY_2025_11_15.md  SESSION_SUMMARY_2025_11_16.md  ThamesColors.md  VCCTL-THAMES-Differences.md  build-macos.sh  build-windows.sh  cemshapes.txt  diffs.txt  micgen-input.md  package-lock.json  post-session-sync.sh  pre-session-sync.sh  release-notes-alpha-3.md  requirements.txt  test_density_calculation.py  test_gems_parser.py  test_material_service.py  test_materials_ui.py  test_mix_design_service.py  thames-macos.spec  thames-windows.spec
.claude/: settings.local.json
backend/: CMakeLists.txt
backend/src/: elastic.c  micgen.c
backend/src/include/: thamesaux.h  thamescomplex.h  thamesfuncs.h  win32_compat.h
backend/src/thamesauxlib/: CMakeLists.txt  checkbc.c  complex.c  diam2vol.c  filehandler.c  fread_string.c  gtime.c  imageutil.c  mediansize.c  memutil.c  messages.c  probe_imgheader.c  ran1.c  read_imgheader.c  read_string.c  skip_imgheader.c  voxindex.c  write_imgheader.c
backend/src/zlib/: .gitignore  Makefile.in  configure  infback.c  phaseids.tex  zconf.h.cmakein  zconf.h.in  zutil.h
backend/src/zlib/.github/workflows/: cmake.yml  configure.yml
backend/src/zlib/contrib/minizip/: ioapi.h  iowin32.c  minizip.c
backend/src/zlib/libpng/: .editorconfig  ANNOUNCE  CHANGES  CMakeLists.txt  Makefile.in  README  configure  configure.ac  libpng-manual.txt  libpng.3  png.c  png.h  pngconf.h  pngerror.c  pngget.c  pnginfo.h  pngmem.c  pngpread.c  pngpriv.h  pngread.c  pngrtran.c  pngrutil.c  pngset.c  pngstruct.h  pngtest.c  pngwrite.c  pngwutil.c
backend/src/zlib/libpng/contrib/libtests/: pngimage.c  pngunknown.c
backend/src/zlib/libpng/contrib/pngminus/: CHANGES.txt
backend/src/zlib/libpng/scripts/: README.txt  libpng-config-head.in  libpng.pc.in  pnglibconf.h.prebuilt
config/: config.yml  preferences.yml
docs/: ALPHA_RELEASE_PREPARATION.md  CNT_ARCHITECTURE.md  CNT_DESIGN_DECISIONS.md  GEMS_DC_STOICHIOMETRY_GUIDE.md  HYDRATION_INTEGRATION_PLAN.md  MICGEN_INPUT_SERVICE_TEST_PROCEDURE.md  POST_ALPHA_TODOS.md  SATURATING_RATE.md  SESSION_10_SUMMARY.md  SESSION_11_SUMMARY.md  (+46 more)
(+311 files in other folders)
